fix testimonial card on mobile

--- a/public/assets/css/about-us.css
+++ b/public/assets/css/about-us.css
@@ -4,22 +4,26 @@
     padding-bottom: 50px;
 }
 
-.swiper-slide.asesmen {
+.swiper-slide {
     background-position: center;
     background-size: cover;
-    width: 800px;
+    width: fit-content;
     height: 500px;
     /* box-shadow: 0 15px 50px rgba(0,0,0,0.2); */
     border-radius: 2rem;
 }
 
-.swiper-slide.asesmen img {
-    display: block;
-    width: 100%;
-    height: 500px;
-    border-radius: 2rem;
-    object-fit: cover;
+@media (max-width: 768px) {
+    .swiper-slide {
+        background-position: center;
+        background-size: cover;
+        width: 100% !important;
+        height: 500px;
+        /* box-shadow: 0 15px 50px rgba(0,0,0,0.2); */
+        border-radius: 2rem;
+    }
 }
+
 
 .swiper-button-next, .swiper-button-prev {
     color: #3aadcb;
